--- a/CSS/style.css
+++ b/CSS/style.css
@@ -126,6 +126,11 @@ a {
     width: 100%;
   }
 
+  .landing-page header .header-links .links li a {
+    display: inline-block;
+    width: 100%;
+  }
+
   .mobile {
     font-size: 25px;
     cursor: pointer;
@@ -227,6 +232,13 @@ a {
   background-color: #088178;
   width: 50%;
   height: 3px;
+}
+
+@media (max-width: 1100px) {
+  .landing-page header .header-links .links li a.active::after,
+  .landing-page header .header-links .links li a:hover::after {
+    width: 15%;
+  }
 }
 
 /* End Header */
