--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1897,6 +1897,7 @@ input:focus::placeholder,
   align-items: flex-start;
   border: 2px solid #ccc;
   padding: 20px 10px 10px;
+  word-break: break-all;
 }
 
 @media (max-width: 575px) {
